--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
-  github-metrics:
+  Metrics:
     runs-on: ubuntu-latest
     environment: 
       name: production
